# monel

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PROGRESS.md  README.md  book.toml
.github/workflows/: deploy-spec.yml
benchmarks/: README.md  compare.sh  dashboard.sh  history.sh  results.jsonl  run.sh
benchmarks/tasks/: add-audit-logging.md  add-error-variant.md  add-rate-limiting.md  dry-run.md  extract-helper.md
crates/monel-bench/: Cargo.toml
crates/monel-bench/rust-baseline/: auth.rs  config.rs  errors.rs  handlers.rs  lib.rs  middleware.rs  types.rs
crates/monel-bench/src/: main.rs
crates/monel-cli/: Cargo.toml
crates/monel-cli/src/: main.rs
crates/monel-core/: Cargo.toml
crates/monel-core/src/: ast.rs  impl_ast.rs  intent_ast.rs  lib.rs  parity.rs
crates/monel-intent-parser/: Cargo.toml
crates/monel-parser/: Cargo.toml
crates/monel-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/monel-parser/tests/: hello.rs  http_handler.rs  stack.rs  (+2 more)
crates/xtask/: Cargo.toml
spec/: 01-overview.md  02-intent-syntax.md  03-impl-syntax.md  04-type-system.md  05-effects.md  06-parity.md  07-modules.md  08-errors.md  09-concurrency.md  10-systems.md  11-tooling.md  12-stdlib.md  README.md  SUMMARY.md  claims.md  parser-plan.md  progress.md
spec/examples/: hello.mn  http_handler.mn  http_handler.mn.intent  http_handler.mn.intent.md  http_handler.mn.md  stack.mn  stack.mn.intent  stack.mn.intent.md  stack.mn.md  stack.mn.test  terminal.mn  terminal.mn.intent  terminal.mn.intent.md  terminal.mn.md  web_server.mn  web_server.mn.md
(+2 files in other folders)
