[package]
name = "monel-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark comparing AI agent efficiency on Monel vs Rust"

[[bin]]
name = "monel-bench"
path = "src/main.rs"

[dependencies]
monel-core = { path = "../monel-core" }
